style(index): Touch-up website wording

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <![endif]-->
 
     <!--[if gt IE 7]><!-->
+    <header class="banner" role="banner">
+    <h1>Hi, my name is Ali Esmaili</h1>
     <nav class="navigation">
       <a href="/resume.pdf" class="icon-doc" aria-label="My R&eacute;sum&eacute;"></a>
       <a href="https://www.linkedin.com/in/SuitAndCape" class="icon-social-linkedin" target="_blank" aria-label="My LinkedIn Profile"></a>
@@ -40,14 +42,11 @@
       <!-- <a href="https://dribbble.com/SuitAndCape" class="icon-social-dribbble" target="_blank" aria-label="My Dribbble account"></a> -->
       <a href="https://www.twitter.com/SuitAndCape" class="icon-social-twitter" target="_blank" aria-label="My Twitter Profile"></a>
     </nav>
-    <header class="banner" role="banner">
-      <h2>Hi, my name is</h2>
-      <h2>Ali Esmaili</h2>
     </header>
 
     <main class="principal">
       <section class="blurb">
-        <p>I aim to create intuitive &amp; minimalistic software.  I'm a full-stack web developer who graduated from Dev Bootcamp SF, with a penchant for creating &amp; tinkering, &amp; loves to learn new skills quickly &amp; implement them efficiently.  Prior to my training at Dev Bootcamp, I spent five years at eBay Inc. (StubHub), as a Senior Content Analyst &amp; Product Support Specialist, a role which allowed me many opportunities to expand my leadership &amp; technical skills.</p>
+        <p>I'm a full-stack web developer who aims to create intuitive &amp; minimalistic software.  I spent five years at eBay Inc. (StubHub) as a Senior Content Analyst &amp; Product Support Specialist, graduated from Dev Bootcamp SF.</p>
       </section>
 
       <section class="skillset">
@@ -166,25 +165,25 @@
           </li>
           <!-- <li class="proj">
             <div>
-              <a href="#" data-work="project-front">
-                <h6>Another Project</h6>
-                <p>Come on, Fhqwhgads.  I said come on Fhqwhgads, I said come on Fhqwhgads &ndash; everybody to the limit, everybody to the limit, everybody come on Fhqwhgads!</p>
+              <a href="https://github.com/SuitAndCape/GlitterAndRetribution" data-work="project-front">
+                <h6>GlitterAndRetribution</h6>
+                <p>A Sublime Text color schemes and a theme package.</p>
               </a>
-              <a href="#" data-work="project-back">
-                <h6>Another Project</h6>
-                <p>Come on, Fhqwhgads.  I said come on Fhqwhgads, I said come on Fhqwhgads &ndash; everybody to the limit, everybody to the limit, everybody come on Fhqwhgads!</p>
+              <a href="https://github.com/SuitAndCape/GlitterAndRetribution" data-work="project-back">
+                <h6>GlitterAndRetribution</h6>
+                <p>A Sublime Text color schemes and a theme package.</p>
               </a>
             </div>
           </li> -->
           <!-- <li class="proj">
             <div>
-              <a href="#" data-work="project-front">
-                <h6>A Different Project</h6>
-                <p>Come on, Fhqwhgads.  I said come on Fhqwhgads, I said come on Fhqwhgads &ndash; everybody to the limit, everybody to the limit, everybody come on Fhqwhgads!</p>
+              <a href="https://github.com/SuitAndCape/FunkyAnimatronicMixologyHenchmen" data-work="project-front">
+                <h6>FunkyAnimatronicMixologyHenchmen</h6>
+                <p>A Sass (SCSS) function, animation/transition, mixin, and helper library.</p>
               </a>
-              <a href="#" data-work="project-back">
-                <h6>A Different Project</h6>
-                <p>Come on, Fhqwhgads.  I said come on Fhqwhgads, I said come on Fhqwhgads &ndash; everybody to the limit, everybody to the limit, everybody come on Fhqwhgads!</p>
+              <a href="https://github.com/SuitAndCape/FunkyAnimatronicMixologyHenchmen" data-work="project-back">
+                <h6>FunkyAnimatronicMixologyHenchmen</h6>
+                <p>A Sass (SCSS) function, animation/transition, mixin, and helper library.</p>
               </a>
             </div>
           </li> -->
@@ -198,11 +197,11 @@
             <div>
               <a href="https://github.com/AESM/KittyParty" data-work="application-front">
                 <h6>KittyParty</h6>
-                <p>A team chat app where the user's message is tokenized and translated into a GIF through the Giphy API, then sent to the chatroom.  Build using JavaScript (ES6), Angular, Node, Express, Socket.io, jQuery, Sass (SCSS), RAPTORFrame, Gulp, and the Giphy API.</p>
+                <p>A team chat app where the user's message is tokenized and translated into a GIF through the Giphy API, then sent to the chatroom.  Built using JavaScript (ES6), Angular, Node, Express, Socket.io, jQuery, Sass (SCSS), RAPTORFrame, Gulp, and the Giphy API.</p>
               </a>
               <a href="https://github.com/AESM/KittyParty" data-work="application-back">
                 <h6>KittyParty</h6>
-                <p>A team chat app where the user's message is tokenized and translated into a GIF through the Giphy API, then sent to the chatroom.  Build using JavaScript (ES6), Angular, Node, Express, Socket.io, jQuery, Sass (SCSS), RAPTORFrame, Gulp, and the Giphy API.</p>
+                <p>A team chat app where the user's message is tokenized and translated into a GIF through the Giphy API, then sent to the chatroom.  Built using JavaScript (ES6), Angular, Node, Express, Socket.io, jQuery, Sass (SCSS), RAPTORFrame, Gulp, and the Giphy API.</p>
               </a>
             </div>
           </li>
@@ -210,23 +209,23 @@
             <div>
               <a href="https://github.com/AESM/OurHouse_Central_Repo" data-work="application-front">
                 <h6>OurHouse</h6>
-                <p>An iOS and Android mobile app for coordinating housemates' social events, chores, and payments.  Build using Angular, Ionic, Rails, OAuth, the Google+ API, and the Venmo API.</p>
+                <p>An iOS and Android mobile app for coordinating housemates' social events, chores, and payments.  Built using Angular, Ionic, Rails, OAuth, the Google+ API, and the Venmo API.</p>
               </a>
               <a href="https://github.com/AESM/OurHouse_Central_Repo" data-work="application-back">
                 <h6>OurHouse</h6>
-                <p>An iOS and Android mobile app for coordinating housemates' social events, chores, and payments.  Build using Angular, Ionic, Rails, OAuth, the Google+ API, and the Venmo API.</p>
+                <p>An iOS and Android mobile app for coordinating housemates' social events, chores, and payments.  Built using Angular, Ionic, Rails, OAuth, the Google+ API, and the Venmo API.</p>
               </a>
             </div>
           </li>
           <!-- <li class="app">
             <div>
-              <a href="#" data-work="application-front">
-                <h6>Another App</h6>
-                <p>And the ones are alllways cooold!  And the parties laaast all niiight!  And there's probably looots of chocolate!  And Populaaation Tire!  Population &ndash; Tiiiiiiiiiire.</p>
+              <a href="https://github.com/AESM/CommandersParamour" data-work="application-front">
+                <h6>Commander's Paramour</h6>
+                <p>A Connect Four clone, playable in a web browser.  Players may share a screen or play in two separate browsers.</p>
               </a>
-              <a href="#" data-work="application-back">
-                <h6>Another App</h6>
-                <p>And the ones are alllways cooold!  And the parties laaast all niiight!  And there's probably looots of chocolate!  And Populaaation Tire!  Population &ndash; Tiiiiiiiiiire.</p>
+              <a href="https://github.com/AESM/CommandersParamour" data-work="application-back">
+                <h6>Commander's Paramour</h6>
+                <p>A Connect Four clone, playable in a web browser.  Players may share a screen or play in two separate browsers.</p>
               </a>
             </div>
           </li> -->
