style(index): Update my personal description

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <main class="principal">
       <section class="blurb">
-        <p>I'm a full-stack web developer who aims to create intuitive &amp; minimalistic software.  I spent five years at eBay Inc. (StubHub) as a Senior Content Analyst &amp; Product Support Specialist, graduated from Dev Bootcamp SF.</p>
+        <p>I'm a full-stack web developer who aims to create intuitive &amp; minimalistic software.  I spent five years at eBay Inc. (StubHub) as a Senior Content Analyst &amp; Product Support Specialist, graduated from Dev Bootcamp SF, &amp; live in Santa Clara.  Mobile-first responsive web design, modular backend code, &amp; designing interactions &amp; workflows are a few of my favorite things.</p>
       </section>
 
       <section class="skillset">
