docs(resume): Update resume, Correct spelling of BusinessMuumuu

--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
           <li class="proj">
             <div>
               <a href="https://github.com/AESM/dotfiles" data-work="project-front">
-                <h6>BusinessMumu</h6>
+                <h6>BusinessMuumuu</h6>
                 <p>My personal OS X configuration.  Contains custom zsh and bash preferences, aliases, Sublime Text settings, automated environment setup, and an installation file.</p>
               </a>
               <a href="https://github.com/AESM/dotfiles" data-work="project-back">
-                <h6>BusinessMumu</h6>
+                <h6>BusinessMuumuu</h6>
                 <p>My personal OS X configuration.  Contains custom zsh and bash preferences, aliases, Sublime Text settings, automated environment setup, and an installation file.</p>
               </a>
             </div>
