--- a/source/root/index.html
+++ b/source/root/index.html
@@ -134,7 +134,7 @@
         <h2 class="secondary-header">Projects</h2>
         <ul>
           <li class="work">
-            <div class="project">
+            <div class="project raptorframe">
               <aside data-work="work-front">
                 <h6>RAPTORFrame</h6>
                 <p>A light, modular framework for rapid development of modern frontend projects.  Compiles, minifies, lints, and builds a distribution of your work.</p>
@@ -143,14 +143,16 @@
               </a> -->
               <aside data-work="work-back">
                 <h6>RAPTORFrame</h6>
-                <p>A light, modular framework for rapid development of modern frontend projects.  Compiles, minifies, lints, and builds a distribution of your work.</p>
+                <!-- ========== -->
+                <!-- PICTURE!!! -->
+                <!-- ========== -->
               </aside>
               <!-- <a href="https://github.com/SuitAndCape/RAPTORFrame" data-work="work-back">
               </a> -->
             </div>
           </li>
           <li class="work">
-            <div class="project">
+            <div class="project businessmuumuu">
               <aside data-work="work-front">
                 <h6>BusinessMuumuu</h6>
                 <p>An open source OS X installer and environment.  System configuration, dotfiles (Zsh and Bash), application and program settings, themes, and more.</p>
@@ -159,14 +161,16 @@
               </a> -->
               <aside data-work="work-back">
                 <h6>BusinessMuumuu</h6>
-                <p>An open source OS X installer and environment.  System configuration, dotfiles (Zsh and Bash), application and program settings, themes, and more.</p>
+                <!-- ========== -->
+                <!-- PICTURE!!! -->
+                <!-- ========== -->
               </aside>
               <!-- <a href="https://github.com/SuitAndCape/BusinessMuumuu" data-work="work-back">
               </a> -->
             </div>
           </li>
           <li class="work">
-            <div class="project">
+            <div class="project raptorsmacss">
               <aside data-work="work-front">
                 <h6>RAPTORSMACSS</h6>
                 <p>A highly modular and organized Sass (SCSS) boilerplate, loosely inspired by the SMACSS architecture pattern, with some layout liberties taken.</p>
@@ -175,7 +179,9 @@
               </a> -->
               <aside data-work="work-back">
                 <h6>RAPTORSMACSS</h6>
-                <p>A highly modular and organized Sass (SCSS) boilerplate, loosely inspired by the SMACSS architecture pattern, with some layout liberties taken.</p>
+                <!-- ========== -->
+                <!-- PICTURE!!! -->
+                <!-- ========== -->
               </aside>
               <!-- <a href="https://github.com/SuitAndCape/RAPTORSMACSS" data-work="work-back">
               </a> -->
@@ -188,7 +194,7 @@
         <h2 class="primary-header">Apps</h2>
         <ul>
           <li class="work">
-            <div class="application">
+            <div class="application kittyparty">
               <aside data-work="work-front">
                 <h6>KittyParty</h6>
                 <p>A chat app where the user's message is tokenized and translated into a GIF through the Giphy API, then both are sent to the chatroom.  So productive.</p>
@@ -197,14 +203,16 @@
               </a> -->
               <aside data-work="work-back">
                 <h6>KittyParty</h6>
-                <p>A chat app where the user's message is tokenized and translated into a GIF through the Giphy API, then both are sent to the chatroom.  So productive.</p>
+                <!-- ========== -->
+                <!-- PICTURE!!! -->
+                <!-- ========== -->
               </aside>
               <!-- <a href="https://github.com/AESM/KittyParty" data-work="work-back">
               </a> -->
             </div>
           </li>
           <li class="work">
-            <div class="application">
+            <div class="application ourhouse">
               <aside data-work="work-front">
                 <h6>OurHouse</h6>
                 <p>An iOS and Android mobile app for coordinating housemates' social events, chores, and payments.  Angular!  Rails!  APIs!  Google Plus!  Venmo!</p>
@@ -213,7 +221,9 @@
               </a> -->
               <aside data-work="work-back">
                 <h6>OurHouse</h6>
-                <p>An iOS and Android mobile app for coordinating housemates' social events, chores, and payments.  Angular!  Rails!  APIs!  Google Plus!  Venmo!</p>
+                <!-- ========== -->
+                <!-- PICTURE!!! -->
+                <!-- ========== -->
               </aside>
               <!-- <a href="https://github.com/AESM/OurHouse_Central_Repo" data-work="work-back">
               </a> -->
@@ -226,7 +236,7 @@
         <h2 class="secondary-header">Websites</h2>
         <ul>
           <li class="work">
-            <div class="website">
+            <div class="website suitandcape">
               <aside data-work="work-front">
                 <h6>SuitAndCape</h6>
                 <p>This very website.  Built using JavaScript, CSS3, HTML5, jQuery, Sass, RAPTORFrame, Gulp, and occasionally other technologies I'm trying out.</p>
@@ -235,14 +245,16 @@
               </a> -->
               <aside data-work="work-back">
                 <h6>SuitAndCape</h6>
-                <p>This very website.  Built using JavaScript, CSS3, HTML5, jQuery, Sass, RAPTORFrame, Gulp, and occasionally other technologies I'm trying out.</p>
+                <!-- ========== -->
+                <!-- PICTURE!!! -->
+                <!-- ========== -->
               </aside>
               <!-- <a href="http://SuitAndCape.github.io/" data-work="work-back">
               </a> -->
             </div>
           </li>
           <li class="work">
-            <div class="website">
+            <div class="website e-dapp">
               <aside data-work="work-front">
                 <h6>e-dapp</h6>
                 <p>The minimalistic portfolio of Eric Lawrence Dapp, where beautiful music and thoughtful blog posts about data analysis live together in harmony.</p>
@@ -251,7 +263,9 @@
               </a> -->
               <aside data-work="work-back">
                 <h6>e-dapp</h6>
-                <p>The minimalistic portfolio of Eric Lawrence Dapp, where beautiful music and thoughtful blog posts about data analysis live together in harmony.</p>
+                <!-- ========== -->
+                <!-- PICTURE!!! -->
+                <!-- ========== -->
               </aside>
               <!-- <a href="http://e-dapp.github.io/" data-work="work-back">
               </a> -->
