style(images): Add themed tint to background and work-back images

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="author" content="Ali Esmaili" />
     <meta name="description" content="Ali Esmaili is full-stack software engineer and web developer, based in the Southern Bay Area." />
     <meta name="keywords" content="CSS, CSS3, HTML, HTML5, JavaScript, SCSS, Sass, jQuery, RAPTORFrame, RAPTORSMACSS, SMACSS, SuitAndCape, AESM, Ali Esmaili" />
-    <meta property="og:image" content="http://suitandcape.github.io/frame/images/wallpapers/suitandcape-1600x1600.jpg" />
+    <meta property="og:image" content="http://suitandcape.github.io/frame/images/wallpapers/SuitAndCape-bg-1600x1600.jpg" />
     <link rel="apple-touch-icon" href="" />
     <meta name="theme-color" content="#660000" />
     <link rel="icon" type="image/png" href="frame/images/fabicon-16x16.png" />
@@ -27,31 +27,30 @@
 
 <!-- Page Layout ============================================================-->
 
-  <body>
+  <body class="bg-image">
     <!--[if lt IE 8]>
       <p class="tired-browser">Your browser is <strong>outdated</strong>.  If you <a href="http://browsehappy.com/" target="_blank">upgrade your browser</a>, you'll have a good time.</p>
     <![endif]-->
 
     <!--[if gt IE 7]><!-->
     <header class="banner" role="banner">
-    <h1>Hi, my name is Ali Esmaili</h1>
-    <nav class="navigation">
-      <a href="/resume.pdf" class="icon-doc" aria-label="My R&eacute;sum&eacute;"></a>
-      <a href="https://www.linkedin.com/in/SuitAndCape" class="icon-social-linkedin" target="_blank" aria-label="My LinkedIn Profile"></a>
-      <a href="https://www.github.com/AESM" class="icon-social-github" target="_blank" aria-label="My GitHub Account"></a>
-      <!-- <a href="https://dribbble.com/SuitAndCape" class="icon-social-dribbble" target="_blank" aria-label="My Dribbble account"></a> -->
-      <a href="https://www.twitter.com/SuitAndCape" class="icon-social-twitter" target="_blank" aria-label="My Twitter Profile"></a>
-    </nav>
+      <h1>Hi, my name is Ali Esmaili</h1>
+      <nav class="navigation">
+        <a href="/resume.pdf" class="icon-doc" aria-label="My R&eacute;sum&eacute;"></a>
+        <a href="https://www.linkedin.com/in/SuitAndCape" class="icon-social-linkedin" target="_blank" aria-label="My LinkedIn Profile"></a>
+        <a href="https://www.github.com/AESM" class="icon-social-github" target="_blank" aria-label="My GitHub Account"></a>
+        <!-- <a href="https://dribbble.com/SuitAndCape" class="icon-social-dribbble" target="_blank" aria-label="My Dribbble account"></a> -->
+        <a href="https://www.twitter.com/SuitAndCape" class="icon-social-twitter" target="_blank" aria-label="My Twitter Profile"></a>
+      </nav>
     </header>
 
     <main class="principal">
       <section class="blurb">
         <ul>
-          <li>Full-Stack Developer</li>
-          <li>Minimalistic &amp; Intuitive Software</li>
-          <li>Device-Agnostic Web Development</li>
-          <li>Responsive &amp; Mobile-First Design</li>
-          <!-- <li>Santa Clara, CA</li> -->
+          <li><small>Full-Stack Developer</small></li>
+          <li><small>Minimalistic &amp; Intuitive Software</small></li>
+          <li><small>Device-Agnostic Web Development</small></li>
+          <li><small>Responsive &amp; Mobile-First Design</small></li>
         </ul>
       </section>
 
