--- a/index.html
+++ b/index.html
@@ -137,14 +137,12 @@
               <aside data-work="work-front">
                 <h6>RAPTORFrame</h6>
                 <p>A light, modular framework for rapid development of modern frontend projects.  Compiles, minifies, lints, and builds a distribution of your work.</p>
+                <a href="https://github.com/SuitAndCape/RAPTORFrame" class="icon-social-github" target="_blank" aria-label="RAPTORFrame GitHub repo"></a>
               </aside>
-              <!-- <a href="https://github.com/SuitAndCape/RAPTORFrame" data-work="work-front">
-              </a> -->
               <aside data-work="work-back">
                 <h6>RAPTORFrame</h6>
+                <a href="https://github.com/SuitAndCape/RAPTORFrame" class="icon-social-github" target="_blank" aria-label="RAPTORFrame GitHub repo"></a>
               </aside>
-              <!-- <a href="https://github.com/SuitAndCape/RAPTORFrame" data-work="work-back">
-              </a> -->
             </div>
           </li>
           <li class="work">
@@ -152,14 +150,12 @@
               <aside data-work="work-front">
                 <h6>BusinessMuumuu</h6>
                 <p>An open source OS X installer and environment.  System configuration, dotfiles (Zsh and Bash), application and program settings, themes, and more.</p>
+                <a href="https://github.com/SuitAndCape/BusinessMuumuu" class="icon-social-github" target="_blank" aria-label="BusinessMuumuu GitHub repo"></a>
               </aside>
-              <!-- <a href="https://github.com/SuitAndCape/BusinessMuumuu" data-work="work-front">
-              </a> -->
               <aside data-work="work-back">
                 <h6>BusinessMuumuu</h6>
+                <a href="https://github.com/SuitAndCape/BusinessMuumuu" class="icon-social-github" target="_blank" aria-label="BusinessMuumuu GitHub repo"></a>
               </aside>
-              <!-- <a href="https://github.com/SuitAndCape/BusinessMuumuu" data-work="work-back">
-              </a> -->
             </div>
           </li>
           <li class="work">
@@ -167,14 +163,12 @@
               <aside data-work="work-front">
                 <h6>RAPTORSMACSS</h6>
                 <p>A highly modular and organized Sass (SCSS) boilerplate, loosely inspired by the SMACSS architecture pattern, with some layout liberties taken.</p>
+                <a href="https://github.com/SuitAndCape/RAPTORSMACSS" class="icon-social-github" target="_blank" aria-label="RAPTORSMACSS GitHub repo"></a>
               </aside>
-              <!-- <a href="https://github.com/SuitAndCape/RAPTORSMACSS" data-work="work-front">
-              </a> -->
               <aside data-work="work-back">
                 <h6>RAPTORSMACSS</h6>
+                <a href="https://github.com/SuitAndCape/RAPTORSMACSS" class="icon-social-github" target="_blank" aria-label="RAPTORSMACSS GitHub repo"></a>
               </aside>
-              <!-- <a href="https://github.com/SuitAndCape/RAPTORSMACSS" data-work="work-back">
-              </a> -->
             </div>
           </li>
         </ul>
@@ -188,14 +182,12 @@
               <aside data-work="work-front">
                 <h6>KittyParty</h6>
                 <p>A chat app where the user's message is tokenized and translated into a GIF through the Giphy API, then both are sent to the chatroom.  So productive.</p>
+                <a href="https://github.com/AESM/KittyParty" class="icon-social-github" target="_blank" aria-label="KittyParty GitHub repo"></a>
               </aside>
-              <!-- <a href="https://github.com/AESM/KittyParty" data-work="work-front">
-              </a> -->
               <aside data-work="work-back">
                 <h6>KittyParty</h6>
+                <a href="https://github.com/AESM/KittyParty" class="icon-social-github" target="_blank" aria-label="KittyParty GitHub repo"></a>
               </aside>
-              <!-- <a href="https://github.com/AESM/KittyParty" data-work="work-back">
-              </a> -->
             </div>
           </li>
           <li class="work">
@@ -203,14 +195,12 @@
               <aside data-work="work-front">
                 <h6>OurHouse</h6>
                 <p>An iOS and Android mobile app for coordinating housemates' social events, chores, and payments.  Angular!  Rails!  APIs!  Google Plus!  Venmo!</p>
+                <a href="https://github.com/AESM/OurHouse_Central_Repo" class="icon-social-github" target="_blank" aria-label="OurHouse GitHub repo"></a>
               </aside>
-              <!-- <a href="https://github.com/AESM/OurHouse_Central_Repo" data-work="work-front">
-              </a> -->
               <aside data-work="work-back">
                 <h6>OurHouse</h6>
+                <a href="https://github.com/AESM/OurHouse_Central_Repo" class="icon-social-github" target="_blank" aria-label="OurHouse GitHub repo"></a>
               </aside>
-              <!-- <a href="https://github.com/AESM/OurHouse_Central_Repo" data-work="work-back">
-              </a> -->
             </div>
           </li>
         </ul>
@@ -224,14 +214,14 @@
               <aside data-work="work-front">
                 <h6>SuitAndCape</h6>
                 <p>This very website.  Built using JavaScript, CSS3, HTML5, jQuery, Sass, RAPTORFrame, Gulp, and occasionally other technologies I'm trying out.</p>
+                <a href="http://SuitAndCape.github.io/" class="icon-link" target="_blank" aria-label="SuitAndCape website"></a>
+                <a href="https://github.com/SuitAndCape/SuitAndCape.github.io" class="icon-social-github" target="_blank" aria-label="SuitAndCape GitHub repo"></a>
               </aside>
-              <!-- <a href="http://SuitAndCape.github.io/" data-work="work-front">
-              </a> -->
               <aside data-work="work-back">
                 <h6>SuitAndCape</h6>
+                <a href="http://SuitAndCape.github.io/" class="icon-link" target="_blank" aria-label="SuitAndCape website"></a>
+                <a href="https://github.com/SuitAndCape/SuitAndCape.github.io" class="icon-social-github" target="_blank" aria-label="SuitAndCape GitHub repo"></a>
               </aside>
-              <!-- <a href="http://SuitAndCape.github.io/" data-work="work-back">
-              </a> -->
             </div>
           </li>
           <li class="work">
@@ -239,14 +229,14 @@
               <aside data-work="work-front">
                 <h6>e-dapp</h6>
                 <p>The minimalistic portfolio of Eric Lawrence Dapp, where beautiful music and thoughtful blog posts about data analysis live together in harmony.</p>
+                <a href="http://e-dapp.github.io/" class="icon-link" target="_blank" aria-label="e-dapp website"></a>
+                <a href="https://github.com/e-dapp/e-dapp.github.io" class="icon-social-github" target="_blank" aria-label="e-dapp GitHub repo"></a>
               </aside>
-              <!-- <a href="http://e-dapp.github.io/" data-work="work-front">
-              </a> -->
               <aside data-work="work-back">
                 <h6>e-dapp</h6>
+                <a href="http://e-dapp.github.io/" class="icon-link" target="_blank" aria-label="e-dapp website"></a>
+                <a href="https://github.com/e-dapp/e-dapp.github.io" class="icon-social-github" target="_blank" aria-label="e-dapp GitHub repo"></a>
               </aside>
-              <!-- <a href="http://e-dapp.github.io/" data-work="work-back">
-              </a> -->
             </div>
           </li>
         </ul>
