style(index): Shorten blurb for brevity

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       <section class="blurb">
         <ul>
           <li><small>Full-Stack Developer</small></li>
-          <li><small>Minimalistic &amp; Intuitive Software</small></li>
-          <li><small>Device-Agnostic Web Development</small></li>
+          <li><small>Minimalistic &amp; Intuitive Web Apps</small></li>
+          <li><small>Device-Agnostic Development</small></li>
           <li><small>Responsive &amp; Mobile-First Design</small></li>
         </ul>
       </section>
