Revert "feat(skillset): Flip skillset graph"

--- a/source/root/index.html
+++ b/source/root/index.html
@@ -57,75 +57,75 @@
       <section class="skillset">
         <h2 class="primary-header">Skillset</h2>
         <ul>
-          <li data-skill-level="10">
-            <span class="skill">Ruby</span>
-          </li>
-          <li data-skill-level="7">
-            <span class="skill">Python3</span>
-          </li>
-          <li data-skill-level="8">
-            <span class="skill">JavaScript</span>
-          </li>
-          <li data-skill-level="9">
-            <span class="skill">CSS3</span>
-          </li>
-          <li data-skill-level="5">
-            <span class="skill">AJAX</span>
-          </li>
-          <li data-skill-level="7">
-            <span class="skill">Shell Script</span>
-          </li>
-          <!-- <li data-skill-level="1">
-            <span class="skill">PHP</span>
-          </li> -->
-          <li data-skill-level="4">
-            <span class="skill">AngularJS</span>
-          </li>
-          <li data-skill-level="9">
-            <span class="skill">Gulp.js</span>
-          </li>
-          <!-- <li data-skill-level="0">
-            <span class="skill">Java</span>
-          </li> -->
-          <li data-skill-level="8">
-            <span class="skill">HTML5</span>
-          </li>
-          <li data-skill-level="6">
-            <span class="skill">SQL</span>
-          </li>
-          <li data-skill-level="1">
-            <span class="skill">XML</span>
-          </li>
-          <li data-skill-level="10">
-            <span class="skill">Sass (SCSS)</span>
-          </li>
-          <!-- <li data-skill-level="6">
-            <span class="skill">Node.js</span>
-          </li> -->
-          <li data-skill-level="7">
-            <span class="skill">jQuery</span>
-          </li>
-          <li data-skill-level="3">
-            <span class="skill">LaTeX</span>
-          </li>
-          <!-- <li data-skill-level="10">
-            <span class="skill">Markdown</span>
-          </li> -->
-          <!-- <li data-skill-level="4">
-            <span class="skill">Ionic Framework</span>
-          </li> -->
-          <li data-skill-level="9">
-            <span class="skill">Foundation</span>
-          </li>
-          <!-- <li data-skill-level="8">
-            <span class="skill">Bootstrap</span>
+          <!-- <li data-skill-level="7">
+            <span class="skill">Git</span>
           </li> -->
           <li data-skill-level="8">
             <span class="skill">Ruby on Rails</span>
           </li>
-          <!-- <li data-skill-level="7">
-            <span class="skill">Git</span>
+          <!-- <li data-skill-level="8">
+            <span class="skill">Bootstrap</span>
           </li> -->
+          <li data-skill-level="9">
+            <span class="skill">Foundation</span>
+          </li>
+          <!-- <li data-skill-level="4">
+            <span class="skill">Ionic Framework</span>
+          </li> -->
+          <li data-skill-level="1">
+            <span class="skill">LaTeX</span>
+          </li>
+          <li data-skill-level="6">
+            <span class="skill">jQuery</span>
+          </li>
+          <!-- <li data-skill-level="6">
+            <span class="skill">Node.js</span>
+          </li> -->
+          <!-- <li data-skill-level="10">
+            <span class="skill">Markdown</span>
+          </li> -->
+          <li data-skill-level="10">
+            <span class="skill">Sass (SCSS)</span>
+          </li>
+          <li data-skill-level="3">
+            <span class="skill">XML</span>
+          </li>
+          <li data-skill-level="7">
+            <span class="skill">SQL</span>
+          </li>
+          <li data-skill-level="8">
+            <span class="skill">HTML5</span>
+          </li>
+          <!-- <li data-skill-level="0">
+            <span class="skill">Java</span>
+          </li> -->
+          <li data-skill-level="9">
+            <span class="skill">Gulp.js</span>
+          </li>
+          <li data-skill-level="4">
+            <span class="skill">AngularJS</span>
+          </li>
+          <!-- <li data-skill-level="1">
+            <span class="skill">PHP</span>
+          </li> -->
+          <li data-skill-level="7">
+            <span class="skill">Shell Script</span>
+          </li>
+          <li data-skill-level="5">
+            <span class="skill">AJAX</span>
+          </li>
+          <li data-skill-level="9">
+            <span class="skill">CSS3</span>
+          </li>
+          <li data-skill-level="8">
+            <span class="skill">JavaScript</span>
+          </li>
+          <li data-skill-level="7">
+            <span class="skill">Python</span>
+          </li>
+          <li data-skill-level="10">
+            <span class="skill">Ruby</span>
+          </li>
         </ul>
       </section>
 
