--- a/source/root/index.html
+++ b/source/root/index.html
@@ -224,21 +224,21 @@
               </section>
             </div>
           </li>
-          <li class="work">
+          <!-- <li class="work">
             <div class="website e-dapp">
               <section data-work="work-front">
                 <h6>e-dapp</h6>
                 <p>The minimalistic portfolio of Eric Lawrence Dapp, where beautiful music and thoughtful blog posts about data analysis live together in harmony.</p>
-                <!-- <a href="https://github.com/e-dapp/e-dapp.github.io" class="icon-social-github" target="_blank" aria-label="e-dapp GitHub repo"></a> -->
                 <a href="http://e-dapp.github.io/" class="icon-link" target="_blank" aria-label="e-dapp website"></a>
               </section>
               <section data-work="work-back">
                 <h6>e-dapp</h6>
-                <!-- <a href="https://github.com/e-dapp/e-dapp.github.io" class="icon-social-github" target="_blank" aria-label="e-dapp GitHub repo"></a> -->
                 <a href="http://e-dapp.github.io/" class="icon-link" target="_blank" aria-label="e-dapp website"></a>
               </section>
             </div>
-          </li>
+          </li> -->
+                <!-- <a href="https://github.com/e-dapp/e-dapp.github.io" class="icon-social-github" target="_blank" aria-label="e-dapp GitHub repo"></a> -->
+                <!-- <a href="https://github.com/e-dapp/e-dapp.github.io" class="icon-social-github" target="_blank" aria-label="e-dapp GitHub repo"></a> -->
         </ul>
       </section>
     </main>
