tweak(index): Redirect page
- Redirect to SuitAndCape.com

--- a/index.html
+++ b/index.html
@@ -9,247 +9,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <title>Ali Esmaili | Software Engineer | SuitAndCape</title>
+    <title>Redirect to SuitAndCape</title>
     <meta name="author" content="Ali Esmaili" />
     <meta name="description" content="Ali Esmaili is full-stack software engineer and web developer, based in the Southern Bay Area." />
     <meta name="keywords" content="CSS, CSS3, HTML, HTML5, JavaScript, SCSS, Sass, jQuery, RAPTORFrame, RAPTORSMACSS, SMACSS, SuitAndCape, AESM, Ali Esmaili" />
     <meta property="og:image" content="http://suitandcape.github.io/frame/images/wallpapers/SuitAndCape-bg-1600x1600.jpg" />
-    <link rel="apple-touch-icon" href="" />
     <meta name="theme-color" content="#660000" />
+    <link rel="apple-touch-icon" href="" />
     <link rel="icon" type="image/png" href="frame/images/fabicon-16x16.png" />
     <!--[if IE]><link rel="shortcut icon" type="image/x-icon" href="frame/images/fabicon-16x16.ico"><![endif]-->
-
-<!-- Style Resources ========================================================-->
-
-    <link rel="stylesheet" type="text/css" href="frame/stylesheets/raptor.css" />
-    <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+    <meta http-equiv="Refresh" content="0; url=https://SuitAndCape.com/">
   </head>
 
 <!-- Page Layout ============================================================-->
 
-  <body class="bg-image">
-    <!--[if lt IE 8]>
-      <p class="tired-browser">Your browser is <strong>outdated</strong>.  If you <a href="http://browsehappy.com/" target="_blank">upgrade your browser</a>, you'll have a good time.</p>
-    <![endif]-->
-
-    <!--[if gt IE 7]><!-->
-    <header class="banner" role="banner">
-      <h1>Hi, my name is Ali Esmaili</h1>
-      <nav class="navigation">
-        <a href="/resume.pdf" class="icon-doc" aria-label="My R&eacute;sum&eacute;"></a>
-        <a href="https://www.linkedin.com/in/SuitAndCape" class="icon-social-linkedin" target="_blank" aria-label="My LinkedIn Profile"></a>
-        <a href="https://www.github.com/AESM" class="icon-social-github" target="_blank" aria-label="My GitHub Account"></a>
-        <!-- <a href="https://dribbble.com/SuitAndCape" class="icon-social-dribbble" target="_blank" aria-label="My Dribbble account"></a> -->
-        <a href="https://www.twitter.com/SuitAndCape" class="icon-social-twitter" target="_blank" aria-label="My Twitter Profile"></a>
-      </nav>
-    </header>
-
-    <main class="principal">
-      <section class="blurb">
-        <ul>
-          <li><small>Full-Stack Developer</small></li>
-          <li><small>Minimalistic &amp; Intuitive Web Apps</small></li>
-          <li><small>Device-Agnostic Development</small></li>
-          <li><small>Responsive &amp; Mobile-First Design</small></li>
-        </ul>
-      </section>
-
-      <section class="skillset">
-        <h2 class="primary-header">Skillset</h2>
-        <ul>
-          <li data-skill-level="10">
-            <span class="skill">Ruby</span>
-          </li>
-          <li data-skill-level="7">
-            <span class="skill">Python3</span>
-          </li>
-          <li data-skill-level="8">
-            <span class="skill">JavaScript</span>
-          </li>
-          <li data-skill-level="9">
-            <span class="skill">CSS3</span>
-          </li>
-          <li data-skill-level="5">
-            <span class="skill">AJAX</span>
-          </li>
-          <li data-skill-level="7">
-            <span class="skill">Shell Script</span>
-          </li>
-          <!-- <li data-skill-level="1">
-            <span class="skill">PHP</span>
-          </li> -->
-          <li data-skill-level="4">
-            <span class="skill">AngularJS</span>
-          </li>
-          <li data-skill-level="9">
-            <span class="skill">Gulp.js</span>
-          </li>
-          <!-- <li data-skill-level="0">
-            <span class="skill">Java</span>
-          </li> -->
-          <li data-skill-level="8">
-            <span class="skill">HTML5</span>
-          </li>
-          <li data-skill-level="6">
-            <span class="skill">SQL</span>
-          </li>
-          <li data-skill-level="1">
-            <span class="skill">XML</span>
-          </li>
-          <li data-skill-level="10">
-            <span class="skill">Sass (SCSS)</span>
-          </li>
-          <!-- <li data-skill-level="6">
-            <span class="skill">Node.js</span>
-          </li> -->
-          <li data-skill-level="7">
-            <span class="skill">jQuery</span>
-          </li>
-          <li data-skill-level="3">
-            <span class="skill">LaTeX</span>
-          </li>
-          <!-- <li data-skill-level="10">
-            <span class="skill">Markdown</span>
-          </li> -->
-          <!-- <li data-skill-level="4">
-            <span class="skill">Ionic Framework</span>
-          </li> -->
-          <li data-skill-level="9">
-            <span class="skill">Foundation</span>
-          </li>
-          <!-- <li data-skill-level="8">
-            <span class="skill">Bootstrap</span>
-          </li> -->
-          <li data-skill-level="8">
-            <span class="skill">Ruby on Rails</span>
-          </li>
-          <!-- <li data-skill-level="7">
-            <span class="skill">Git</span>
-          </li> -->
-        </ul>
-      </section>
-
-      <section class="work-list project-list">
-        <h2 class="secondary-header">Projects</h2>
-        <ul>
-          <li class="work">
-            <div class="project raptorframe">
-              <section data-work="work-front">
-                <h6>RAPTORFrame</h6>
-                <p>A light, modular framework for rapid development of modern frontend projects.  Compiles, minifies, lints, and builds a distribution of your work.</p>
-                <a href="https://github.com/SuitAndCape/RAPTORFrame" class="icon-social-github" target="_blank" aria-label="RAPTORFrame GitHub repo"></a>
-              </section>
-              <section data-work="work-back">
-                <h6>RAPTORFrame</h6>
-                <a href="https://github.com/SuitAndCape/RAPTORFrame" class="icon-social-github" target="_blank" aria-label="RAPTORFrame GitHub repo"></a>
-              </section>
-            </div>
-          </li>
-          <li class="work">
-            <div class="project businessmuumuu">
-              <section data-work="work-front">
-                <h6>BusinessMuumuu</h6>
-                <p>An open source OS X installer and environment.  System configuration, dotfiles (Zsh and Bash), application and program settings, themes, and more.</p>
-                <a href="https://github.com/SuitAndCape/BusinessMuumuu" class="icon-social-github" target="_blank" aria-label="BusinessMuumuu GitHub repo"></a>
-              </section>
-              <section data-work="work-back">
-                <h6>BusinessMuumuu</h6>
-                <a href="https://github.com/SuitAndCape/BusinessMuumuu" class="icon-social-github" target="_blank" aria-label="BusinessMuumuu GitHub repo"></a>
-              </section>
-            </div>
-          </li>
-          <li class="work">
-            <div class="project raptorsmacss">
-              <section data-work="work-front">
-                <h6>RAPTORSMACSS</h6>
-                <p>A highly modular and organized Sass (SCSS) boilerplate, loosely inspired by the SMACSS architecture pattern, with some layout liberties taken.</p>
-                <a href="https://github.com/SuitAndCape/RAPTORSMACSS" class="icon-social-github" target="_blank" aria-label="RAPTORSMACSS GitHub repo"></a>
-              </section>
-              <section data-work="work-back">
-                <h6>RAPTORSMACSS</h6>
-                <a href="https://github.com/SuitAndCape/RAPTORSMACSS" class="icon-social-github" target="_blank" aria-label="RAPTORSMACSS GitHub repo"></a>
-              </section>
-            </div>
-          </li>
-        </ul>
-      </section>
-
-      <section class="work-list application-list">
-        <h2 class="primary-header">Apps</h2>
-        <ul>
-          <li class="work">
-            <div class="application kittyparty">
-              <section data-work="work-front">
-                <h6>KittyParty</h6>
-                <p>A chat app where the user's message is tokenized and translated into a GIF through the Giphy API, then both are sent to the chatroom.  So productive.</p>
-                <a href="https://github.com/AESM/KittyParty" class="icon-social-github" target="_blank" aria-label="KittyParty GitHub repo"></a>
-              </section>
-              <section data-work="work-back">
-                <h6>KittyParty</h6>
-                <a href="https://github.com/AESM/KittyParty" class="icon-social-github" target="_blank" aria-label="KittyParty GitHub repo"></a>
-              </section>
-            </div>
-          </li>
-          <li class="work">
-            <div class="application ourhouse">
-              <section data-work="work-front">
-                <h6>OurHouse</h6>
-                <p>An iOS and Android mobile app for coordinating housemates' social events, chores, and payments.  Angular!  Rails!  APIs!  Google Plus!  Venmo!</p>
-                <a href="https://github.com/AESM/OurHouse_Central_Repo" class="icon-social-github" target="_blank" aria-label="OurHouse GitHub repo"></a>
-              </section>
-              <section data-work="work-back">
-                <h6>OurHouse</h6>
-                <a href="https://github.com/AESM/OurHouse_Central_Repo" class="icon-social-github" target="_blank" aria-label="OurHouse GitHub repo"></a>
-              </section>
-            </div>
-          </li>
-        </ul>
-      </section>
-
-      <section class="work-list website-list">
-        <h2 class="secondary-header">Websites</h2>
-        <ul>
-          <li class="work">
-            <div class="website suitandcape">
-              <section data-work="work-front">
-                <h6>SuitAndCape</h6>
-                <p>This very website.  Built using JavaScript, CSS3, HTML5, jQuery, Sass, RAPTORFrame, Gulp, and occasionally other technologies I'm trying out.</p>
-                <a href="https://github.com/SuitAndCape/SuitAndCape.github.io" class="icon-social-github" target="_blank" aria-label="SuitAndCape GitHub repo"></a>
-                <!-- <a href="http://SuitAndCape.github.io/" class="icon-link" target="_blank" aria-label="SuitAndCape website"></a> -->
-              </section>
-              <section data-work="work-back">
-                <h6>SuitAndCape</h6>
-                <a href="https://github.com/SuitAndCape/SuitAndCape.github.io" class="icon-social-github" target="_blank" aria-label="SuitAndCape GitHub repo"></a>
-                <!-- <a href="http://SuitAndCape.github.io/" class="icon-link" target="_blank" aria-label="SuitAndCape website"></a> -->
-              </section>
-            </div>
-          </li>
-          <!-- <li class="work">
-            <div class="website e-dapp">
-              <section data-work="work-front">
-                <h6>e-dapp</h6>
-                <p>The minimalistic portfolio of Eric Lawrence Dapp, where beautiful music and thoughtful blog posts about data analysis live together in harmony.</p>
-                <a href="http://e-dapp.github.io/" class="icon-link" target="_blank" aria-label="e-dapp website"></a>
-              </section>
-              <section data-work="work-back">
-                <h6>e-dapp</h6>
-                <a href="http://e-dapp.github.io/" class="icon-link" target="_blank" aria-label="e-dapp website"></a>
-              </section>
-            </div>
-          </li> -->
-                <!-- <a href="https://github.com/e-dapp/e-dapp.github.io" class="icon-social-github" target="_blank" aria-label="e-dapp GitHub repo"></a> -->
-                <!-- <a href="https://github.com/e-dapp/e-dapp.github.io" class="icon-social-github" target="_blank" aria-label="e-dapp GitHub repo"></a> -->
-        </ul>
-      </section>
-    </main>
-
-    <footer class="root" role="contentinfo">
-      <small class="copyright">&copy; Ali Esmaili | SuitAndCape | Santa Clara, CA</small>
-    </footer>
-
-<!-- Script Resources =======================================================-->
-
-    <script type="text/javascript" src="frame/javascripts/raptor.js"></script>
-    <!--<![endif]-->
+  <body>
+    <!-- This page is just a redirect -->
   </body>
 </html>
